--- a/personal/atelier-personnage/css/shop.css
+++ b/personal/atelier-personnage/css/shop.css
@@ -10,16 +10,15 @@
     justify-content: center;
     grid-template-columns: repeat(2, 1fr);
     margin: 0 auto;
-    border-right: 1px solid black;
-    border-bottom: 1px solid black;
+    border-collapse: collapse;
 }
 
 .product-item {
     text-align: center;
     padding: 0 0 60px;
     background: #fff;
-    border-top: 1px solid black;
-    border-left: 1px solid black;
+    border: 1px solid black;
+    margin: -1px 0 0 -1px;
     position: relative;
 }
 
