--- a/personal/atelier-personnage/css/shop.css
+++ b/personal/atelier-personnage/css/shop.css
@@ -41,6 +41,8 @@
     position: relative;
     width: 100%;
     overflow: hidden;
+    touch-action: pan-x; /* Only allow horizontal gestures */
+    -ms-touch-action: pan-x; /* For older browsers */
 }
 
 .image-slider-inner {
