--- a/personal/atelier-personnage/css/style.css
+++ b/personal/atelier-personnage/css/style.css
@@ -164,6 +164,7 @@ h1, h2, h3, h4, h5, h6 {
     outline: none;
     font-size: 0.9rem;
     font-family: "Jost", sans-serif;
+    text-transform: uppercase;
 }
 
 .search-box {
