--- a/personal/atelier-personnage/css/style.css
+++ b/personal/atelier-personnage/css/style.css
@@ -105,6 +105,7 @@ h1, h2, h3, h4, h5, h6 {
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
+    text-align: center;
     padding: 80px 30px;
     transform: translateY(-100%);
     transition: transform 0.3s ease;
@@ -123,7 +124,7 @@ h1, h2, h3, h4, h5, h6 {
 .mobile-menu ul li a {
     text-decoration: none;
     color: black;
-    font-size: 1rem;
+    font-size: 1.5rem;
 }
 
 .close-menu {
