--- a/personal/atelier-personnage/partials/header.html
+++ b/personal/atelier-personnage/partials/header.html
@@ -12,7 +12,7 @@
 		    <li><a href="shop.html">SHOP</a></li>
         <li><a href="#">WOMAN</a></li>
         <li><a href="#">MAN</a></li>
-        <li><a href="#">ABOUT</a></li>
+        <li><a href="#">COLLECTION</a></li>
         <li><a href="#">CONTACT</a></li>
       </ul>
     </nav>
