--- a/personal/atelier-personnage/partials/header.html
+++ b/personal/atelier-personnage/partials/header.html
@@ -37,7 +37,7 @@
   <i class="fa-regular fa-bookmark"></i>
   <span class="bookmark-dot"></span>
 </a>
-    <a href="#" class="button">
+    <a href="bag.html" class="button">
       <i class="fa-solid fa-bag-shopping"></i>
     </a>
   </div>
