--- a/personal/atelier-personnage/partials/header.html
+++ b/personal/atelier-personnage/partials/header.html
@@ -9,7 +9,7 @@
         <i class="fas fa-times"></i>
       </a>
       <ul>
-		    <li><a href="shop.html">SHOP</a></li>
+        <li><a href="shop.html">SHOP</a></li>
         <li><a href="#">WOMAN</a></li>
         <li><a href="#">MAN</a></li>
         <li><a href="#">COLLECTION</a></li>
@@ -33,12 +33,16 @@
     <a href="#" class="second-search">
       <i class="fa-solid fa-magnifying-glass"></i>
     </a>
+
+    <!-- Bookmark icon -->
     <a href="saved.html" class="button bookmark-btn">
-  <i class="fa-regular fa-bookmark"></i>
-  <span class="bookmark-dot"></span>
-</a>
-    <a href="bag.html" class="button">
+      <i class="fa-regular fa-bookmark"></i>
+      <span class="bookmark-dot"></span>
+    </a>
+    
+    <a href="bag.html" class="button bag-btn">
       <i class="fa-solid fa-bag-shopping"></i>
+      <span class="bag-dot"></span>
     </a>
   </div>
 </header>
