--- a/personal/atelier-personnage/css/style.css
+++ b/personal/atelier-personnage/css/style.css
@@ -237,6 +237,7 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 3vh;
     letter-spacing: 2px;
     color: white;
+    mix-blend-mode: difference;
 }
 
 /* Universal adaptive button */
@@ -246,7 +247,7 @@ h1, h2, h3, h4, h5, h6 {
     left: 50%;
     transform: translate(-50%, 50%);
     display: inline-block;
-    padding: 1vb 6vb;
+    padding: 1vb 4vb;
     font-size: 2vh;
     text-decoration: none;
     color: white;
