--- a/personal/atelier-personnage/css/saved.css
+++ b/personal/atelier-personnage/css/saved.css
@@ -5,6 +5,46 @@
     border-bottom: 1px solid black;
 }
 
+html, body {
+    height: 100%;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+}
+
+main {
+    flex: 1; /* pushes the footer down */
+}
+
+.empty-message {
+    margin-top: 40%;
+    margin-bottom: 20px;
+    font-size: 1.2rem;
+    color: #7d7d7d; 
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    
+}
+
+.saved-button {
+    display: inline-block;
+    background: black;
+    color: white;
+    padding: 10px 60px;
+    font-size: 0.9rem;
+    text-decoration: none;
+    border: none;
+    cursor: pointer;
+    transition: background 0.2s ease;
+    text-align: center;
+}
+
+.saved-button:hover {
+    background: #333;
+}
+
 .saved-container {
     display: flex;
     flex-direction: column;
@@ -171,11 +211,10 @@
 }
 
 @media (min-width: 1024px) {
-    .saved-container {
-        display: grid;
-        grid-template-columns: repeat(5, 1fr);
-        gap: 20px;
-        max-width: 100%;
+    .saved-container:not(:has(.saved-card)) {
+        display: flex !important;
+        flex-direction: column;
+        align-items: center;
     }
 
     .saved-card {
