--- a/personal/atelier-personnage/css/shop.css
+++ b/personal/atelier-personnage/css/shop.css
@@ -2,6 +2,12 @@
     text-align: center;
     padding-top: 120px;
     padding-bottom: 20px;
+} 
+
+.card-link {
+  display: block;
+  color: inherit;
+  text-decoration: none;
 }
 
 .product-grid {
